style/style.css
/* body Css */
body {
  font-family: "Open Sans", sans-serif;
  font-size: 16px;
  line-height: 1;
}

/* Jumbotron CSS */
.jumbotron {
  text-align: center;
  background-color: #06aed5;
  color: white;
  border-radius: 0;
  box-shadow: 0px 0px 5px 5px black;
}
#jumboTime {
  position: absolute;
  padding: 8px;
  top: -3px;
  left: -3px;
  color: #06aed5;
  background-color: white;
  border-bottom-right-radius: 15px;
  box-shadow: 3px 3px 3px 3px white, 3px 3px 3px 3px black;
}
/* Container CSS */
.container {
  display: flex;
  flex-direction: column;
}
/* localStorageNotification Css */
#storageNotifyCon {
  display: flex;
  justify-content: center;
  padding: 5px;
  height: 0px;
}
#storageNotify {
  height: 55px;
  padding: 10px;
  border: 1px solid white;
  text-align: center;
  background-color: #06aed5;
  color: white;
  border-radius: 15px;
  box-shadow: 1px 1px 10px #06aed5;
  z-index: 1;
}
#spanLocalText {
  margin-top: 5px;
  background-color: white;
  color: #06aed5;
  border-radius: 15px;
  height: 18px;
}

/* Timeblock Css */
.timeblock {
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-radius: 18px;
  height: 100px;
  width: 100%;
}
label {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 10%;
  flex-grow: 1;
  height: 100%;
  margin-bottom: 0;
}
textarea {
  background: transparent;
  border: none;
  resize: none;
  color: #000000;
  border-left: 1px solid black;
  padding: 10px;
}

.blockInput {
  width: 80%;
  background-color: lightgray;
  border-top: 1px solid white;
}

/* SaveDiv Css */
.saveDiv {
  display: flex;
  flex-grow: 1;
  height: 100%;
  justify-content: center;
  align-items: center;
  border-left: 2px solid grey;
  background-color: #06aed5;
  color: white;
  border-top-right-radius: 15px;
  border-bottom-right-radius: 15px;
}
.saveDiv:hover {
  font-size: 20px;
  transition: all 0.3s ease-in-out;
  color: #06aed5;
  background-color: white;
  box-shadow: 5px 5px 10px 5px #06aed5;
}
i {
  height: 100%;
  width: 100%;
  display: flex !important;
  justify-content: center;
  align-items: center;
  box-shadow: 5px 5px 10px 4px grey;
  border-top-right-radius: 15px;
  border-bottom-right-radius: 15px;
}

/* Timeblock hour css */
.hour {
  background-color: #ffffff;
  color: #000000;
  border-top: 1px dashed #000000;
}
/* Timeblock color CSS */
.past {
  background-color: #d3d3d3;
  color: white;
}
.present {
  background-color: #ff6961;
  color: white;
}
.future {
  background-color: #77dd77;
  color: white;
}

